--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,78 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+#root {
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 25px;
+  text-align: center;
+  
+  background-image: linear-gradient(170deg, rgb(247, 207, 206), rgb(243, 172, 100), rgb(203, 34, 99));
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+th {
+  font-size: 3rem;
+  padding: 3rem;
+  padding-top: 5px;
 }
-a:hover {
-  color: #535bf2;
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.selected-contact {
+  text-align: center;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 15px;
+}
+.contact-list {
+  max-width: 700px;
+  text-align: center;
+  color: #12090999;
+  font-size: 20px;
+  cursor: pointer;
+  margin: 0 auto;
+  padding: 20px;
+  transition: background-color 1s ease;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+td {
+  margin-bottom: 20px;
+  margin-top: 15px;
+  padding: 15px;
+  border: 2px solid #fff9c4;
+  
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  text-shadow: 1px 1px 0 #f8f8f1 ;
+  color:#ad3232b5;
+  font-size: 3rem;
+  margin-bottom: 5px;
+  padding: 15px;
+}
+h2 {
+  text-shadow: 1px 1px 0 #f2f2d5f6 ;
+  color:#ac3232b5;
+  margin-bottom: 30px;
+  margin-top: 5px;
+  padding: 15px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+p {
+  text-align: center;
+  max-width: 400px;
+  color: #12090999;
+  font-size: 25px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  padding: 15px;
+  border: 2px solid #fff9c4;
+  border-radius: 20px;
+  transition: background-color 1s ease;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+p:hover {
+  background-color: #fff47e;
+}
+td:hover {
+  background-color: #fff47e;
 }
